14479
{code}
scala> trait A { def f(x: Int = 1) = x }
defined trait A

scala> trait B { def f(x: String = "1") = x }
defined trait B

scala> new A with B
<console>:7: error: overriding method f$$default$$1 in trait A of type => Int;
 method f$$default$$1 in trait B of type => String has incompatible type
       new A with B
           ^
{code}
